<resources>
    <string name="app_name">Movies App</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_title_movie">Title</string>
    <string name="default_year_movie">Year</string>
    <string name="default_rating_movie">0.0</string>
    <string name="default_index_movie">#0</string>
    <string name="current_popular_movies">Current Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="genres">Genres</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="votes">Votes</string>
    <string name="add_to_favorites">+ Add to Favorites</string>
    <string name="more_details">More Details</string>
    <string name="default_date_movie">Date</string>
    <string name="genre">Genre</string>
    <string name="information">Information</string>

    <string-array name="movie_genres">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
    </string-array>
</resources>
