<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_movie_card_item"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/title_movie_card_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="bold"
            android:textSize="18sp"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:text="@string/default_title_movie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/index_movie_card_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="normal"
                android:textSize="14sp"
                android:text="@string/default_index_movie" />

            <TextView
                android:id="@+id/rating_movie_card_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="normal"
                android:textSize="14sp"
                android:text="@string/default_rating_movie" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bookmark_movie_card_item"
            android:layout_width="75dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:tint="@android:color/darker_gray"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="-12dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_bookmark_border_black_24dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>