<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteSmoke"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.HomeFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_popular_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorMainText"
                android:textSize="24sp"
                android:text="@string/current_popular_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/current_popular_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="4dp" />

            <TextView
                android:id="@+id/upcoming_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorMainText"
                android:textSize="24sp"
                android:text="@string/upcoming_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="4dp" />

            <TextView
                android:id="@+id/top_rated_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorMainText"
                android:textSize="24sp"
                android:text="@string/top_rated_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_rated_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="4dp" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>